# classifier-demo

./: .gitignore  CMakeLists.txt  Makefile.am  NEWS  README  README.md  configure.ac
data/: heartDisease.csv  heartDiseaseCovariance.csv  heartDiseaseDiscrete.csv  heartDiseaseDiscreteCovariance.csv  irisCovariance.csv  irisDiscrete.csv  irisDiscreteCovariance.csv  wineCovariance.csv  wineDiscrete.csv  wineDiscreteCovariance.csv  zooMeanTest.csv
scripts/: covariance.r  discreteize.r  heart_disease_labels.sed  iris_labels.sed  labelgraphs.sh  makegraphs.sh  wine_labels.sed
src/: Animal.cpp  Animal.h  BayesClassifier.cpp  BayesClassifier.h  Classifier.cpp  Classifier.h  CsvReader.cpp  CsvReader.h  Dataset.cpp  Dataset.h  DecisionTree.cpp  DecisionTree.h  Makefile.am  Partition.cpp  Partition.h  Types.h  ZooDataset.cpp  ZooDataset.h  classifier-demo.cpp
tests/: .gitignore  DatasetTests.cpp  DecisionTreeTests.cpp  Makefile.am  PartitionTests.cpp  ZooDatasetTests.cpp
